2002-03-02  Bob Friesenhahn <bfriesen@simple.dallas.tx.us>
  * Added Base64Decode() and Base64Encode() to utility.c and updated
    ReadInlineImage() in magick/constitute.c to use Base64Decode().

2002-03-01  Cristy  <cristy@mystic.es.dupont.com>
  * GetTypeInfoByFamily() null pointer fault (reported by Bob Friesenhahn).
  * Added module version number (patch by Glenn Randers-Pehrson).

2002-03-01  Glenn Randers-Pehrson  <randeg@alum.rpi.edu>
  * image->matte was not being set when reading GRAY-ALPHA PNG files.

2002-02-26  Cristy  <cristy@mystic.es.dupont.com>
  * Potential infinite loop in SyncBlob() (reported by  Vladimir Faiden).

2002-02-26  Cristy  <cristy@mystic.es.dupont.com>
  * Gravity not respected when drawing text with the convert program.

2002-02-21  Cristy  <cristy@mystic.es.dupont.com>
  * MPEG multi-part filenames require an embedded %d, not %lu.
  * WriteStream() did not write to fifo (thanks to William Radcliffe).

2002-02-20  Cristy  <cristy@mystic.es.dupont.com>
  * Annotation did not support SJIS properly (patch provided by
    Katsutoshi Shibuya).

2002-02-18  Cristy  <cristy@mystic.es.dupont.com>
  * Fixed memory overrun with -format option of the mogrify program.
  * Labels were not positioned correctly for VID format.

2002-02-16  Cristy  <cristy@mystic.es.dupont.com>
  * Replaced -copy/-replace options with +/-write in the convert program.
  * Median filtering speed enhancement using skip list contributed by
    Mike Edmonds.

2002-02-14  Cristy  <cristy@mystic.es.dupont.com>
  * Command line options now stay in effect for any image in command
    line order until a another option is encountered or if -noop is specified.

2002-02-07  Cristy  <cristy@mystic.es.dupont.com>
  * SVG coders understands inline images.

2002-02-06  Cristy  <cristy@mystic.es.dupont.com>
            Glenn Randers-Pehrson  <randeg@alum.rpi.edu>
  * Made -scene consistent across all utilities.  -snaps replaces previous